Worked on backend ISSUE: testing with postman fail

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://stjense5:Stj5011!@cluster0.f88dl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=se29nwbjdnf2j
